--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
     --card-foreground: oklch(0.145 0 0);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
-    --primary: oklch(0.205 0 0);
+    --primary: #59deca;
     --primary-foreground: oklch(0.985 0 0);
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
@@ -102,6 +102,10 @@
     @apply bg-[#12121280]/50 rounded-md bg-clip-padding backdrop-filter backdrop-blur-xl border-b border-border-dark;
 }
 
+@utility card-shadow {
+    box-shadow: 0px 4px 40px 0px #00000066;
+}
+
 @layer base {
     * {
         @apply border-border outline-ring/50;
@@ -121,6 +125,10 @@
 
     h3 {
         @apply font-schibsted-grotesk text-2xl font-bold;
+    }
+
+    ul {
+        @apply list-disc list-inside;
     }
 }
 
@@ -183,6 +191,82 @@
 
             div {
                 @apply flex flex-row gap-2;
+            }
+        }
+    }
+
+    #event {
+        .header {
+            @apply flex w-2/3 flex-col items-start gap-4 max-lg:w-full mb-10;
+        }
+
+        .details {
+            @apply flex w-full flex-col lg:flex-row gap-12 items-start mt-12 max-lg:items-center;
+
+            .content {
+                @apply flex flex-[2] flex-col gap-8 max-lg:w-full;
+
+                .banner {
+                    @apply max-h-[457px] w-full rounded-lg object-cover;
+                }
+
+                .agenda {
+                    @apply flex flex-col gap-2;
+
+                    ul {
+                        li {
+                            @apply text-light-100 text-lg max-sm:text-sm;
+                        }
+                    }
+                }
+            }
+
+            .booking {
+                @apply flex-1 w-full p-4 border-l border-gray-700;
+
+                .signup-card {
+                    @apply bg-dark-100 border-dark-200 card-shadow flex w-full flex-col gap-6 rounded-[10px] border px-5 py-6;
+                }
+            }
+        }
+
+        h2 {
+            @apply font-schibsted-grotesk text-2xl font-bold;
+        }
+
+        p {
+            @apply text-light-100 text-lg max-sm:text-sm;
+        }
+
+        .flex-col-gap-2 {
+            @apply flex flex-col gap-2;
+        }
+
+        .flex-row-gap-2 {
+            @apply flex flex-row gap-2;
+        }
+    }
+
+    .pill {
+        @apply bg-dark-100 text-light-100 text-xs rounded-[6px] px-5 py-2;
+    }
+
+    #book-event {
+        @apply flex flex-col gap-6;
+
+        form {
+            @apply flex flex-col gap-6;
+
+            div {
+                @apply flex flex-col gap-2;
+
+                input {
+                    @apply bg-dark-200 rounded-[6px] px-5 py-2.5;
+                }
+            }
+
+            button {
+                @apply bg-primary hover:bg-primary/90 w-full cursor-pointer items-center justify-center rounded-[6px] px-4 py-2.5 text-lg font-semibold text-black;
             }
         }
     }
